--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "intl-messageformat": "^10.3.0",
     "jquery": "^3.6.3",
     "jquery-caret-plugin": "^1.5.2",
+    "jquery-countdown": "^2.2.0",
     "jquery-validation": "^1.19.0",
     "js-cookie": "^3.0.1",
     "katex": "^0.16.2",
@@ -53,6 +54,7 @@
     "micromodal": "^0.4.6",
     "mini-css-extract-plugin": "^2.2.2",
     "minimalistic-assert": "^1.0.1",
+    "moment": "^2.30.1",
     "panzoom": "^9.4.2",
     "plotly.js": "^2.0.0",
     "postcss": "^8.0.3",
